--- a/app/views/layouts/swagger.html.haml
+++ b/app/views/layouts/swagger.html.haml
@@ -24,7 +24,7 @@
 
       $(function () {
         window.swaggerUi = new SwaggerUi({
-          discoveryUrl: "http://#{request.host}:#{request.port}/api/swagger_doc.json",
+          url: "http://#{request.host}:#{request.port}/api/swagger_doc.json",
           apiKey:"",
           dom_id:"swagger-ui-container",
           supportHeaderParams: false,
